--- a/notes/js/运算符.md
+++ b/notes/js/运算符.md
@@ -64,7 +64,7 @@ console.log(obj.name?.toLowerCase());
 2. 括号内的链运算符只对括号呢有影响，括号外部没有影响。
 3. 不可以判断构造函数是否存在，会报错。
 4. 链运算符右侧不可以为模板字符串，会报错。
-5. 链运算符位于赋值运算的左侧。 
+5. 链运算不可符位于赋值运算的左侧。 
 
 ## 逻辑赋值运算符 ||=  &&=  ??=
 x ||= y  当x为假，则将y的值赋给x；
